# Rastros-LI2

./: CMakeLists.txt  Doxyfile  README.md  main.c
LinkedLists/: linked.c
bot/: flood_fill.c  flood_fill.h  io_file.c  io_file.h  li2PL2G01  main.c
data/: Doxyfile  file.c  file.h  state.c  state.h
data/html/: annotated.html  classes.html  file_8h.html  file_8h__incl.dot  file_8h__incl.md5  file_8h_source.html  (+22 more)
doc/: CMakeCCompilerId_8c.xml  OS__list_8c.xml  OS__list_8h.xml  README_8md.xml  board_8c.xml  board_8h.xml  dir_0f9694b8de2575528c6c0ae9f79dda65.xml  dir_3924cb794333f3827dc4f454bbc6e9ca.xml  dir_44ea9ed243d3740341f2efeb45271ac4.xml  dir_472fafaf0f039b9e6b043966c1ef7dbf.xml  dir_6d22bba2c21c92b5387a2c0c86e32a20.xml  dir_6e2b1bb48cfb39c2390cb60b879a9e39.xml  dir_72d6d4d139fc2809cfa24345fee1c786.xml  dir_7e5d7e004b344f685f59d01929914aa0.xml  dir_95e29a8b8ee7c54052c171a88bb95675.xml  dir_9aed3e724a98e0e08878e2eb37f766cc.xml  dir_b31d54d5631803016a26f28213a41162.xml  dir_b68836426651c691d15e8ce60b055874.xml  dir_ea5ca36fc7beffb6a048079f0a6091b0.xml  dir_f89abcb304c928c7d889aa5625570de5.xml  dir_f942a7a73394fda25d4213a70555b3f8.xml  file_8c.xml  file_8h.xml  flood__fill_8c.xml  game_8c.xml  game_8h.xml  index.xml  interface_8c.xml  interface_8h.xml  linked_8c.xml  linked_8h.xml  main_8c.xml  md_README.xml  state_8c.xml  state_8h.xml  structList.xml  structMove.xml  structPosition.xml  structState.xml
interface/: board.c  board.h  file.c  file.h  interface.c  interface.h
linked_lists/: linked.c  linked.h
logic/: game.c  game.h
projeto/: a.out  main.c
(+101 files in other folders)
